.idea removed